[package]
name = "strange-touch"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation", 
    "Win32_Storage_FileSystem",
]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

single_call_fn = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
